Minor fix to the .invisible class.

--- a/css/_style.scss
+++ b/css/_style.scss
@@ -53,7 +53,7 @@ body {
   }
 }
 .invisible {
-
+  display: none;
 }
 .visible {
   display: block !important;
