--- a/css/app.css
+++ b/css/app.css
@@ -46,6 +46,9 @@ body {
     .title h1 {
       font-size: 3em; } }
 
+.invisible {
+  display: none; }
+
 .visible {
   display: block !important; }
 
